First working-ish release to apps engine. Some bugs with csrf

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,9 @@ numpy
 wtforms
 werkzeug
 flask
-tensorflow==1.14
 dill
+flask_wtf
+
+google-python-cloud-debugger
+google-cloud-storage
+google-api-python-client
